--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#NotFound {
+  position: fixed;
+  font-size: 4rem;
+  top: 35%;
+  left: 32%;
+  color: black;
+}
+
