--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -8,28 +8,26 @@
 
 #Header-Scrolled {
     background-color: rgb(255, 255, 255);
-    
     color: rgb(0, 0, 0);
     border-width: 0 0 1 0;
     position: fixed;
     width: 100%;
     z-index: 10;
     top: 0;
-    box-shadow: 0px 1px 20px rgba(0, 0, 0, 0.253);
+    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.253);
 }
-
 
 .Header-Container {
     display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
-    width: 88%;
+    grid-template-columns: 0.3fr 3fr 1fr;
+    width: 100%;
     margin: 0px auto;
-    padding: 1vh 1vw;
+    padding: 0px;
 }
 
-#Logo-Section h1 {
-    text-align: left;
-    font-size: 1.5rem;
+#Logo-Section img {
+    height: 80px;
+    margin-left: 40px;
 }
 
 #Navigation-Bar {
@@ -40,7 +38,6 @@
 }
 
 #Navigation-Bar li {
-    margin: 0 1vw;
     font-size: 1.5rem;
 }
 
@@ -51,13 +48,14 @@
 
 #Navigation-Bar-Scrolled {
     display: flex;
-    justify-content: center;
-    padding: 0;
+    justify-content: left;
+    padding-top: 10px;
     list-style: none;
+
 }
 
 #Navigation-Bar-Scrolled li {
-    margin: 0 1vw;
+    margin: 0 1.5vw;
     font-size: 1.5rem;
 }
 
@@ -68,24 +66,4 @@
 
 #Navigation-Bar-Scrolled a {
     color: rgb(0, 0, 0);
-}
-
-#LoginCart {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0;
-    list-style: none;
-}
-
-#LoginCart p,
-#LoginCart a {
-    color: var(--MainColor);
-    text-decoration: none;
-    font-size: 1.5rem;
-    margin: 0;
-}
-
-#LoginCart .Scrolled-Login {
-    color: white;
 }
