--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -8,7 +8,6 @@
 
 #Header-Scrolled {
     background-color: rgb(255, 255, 255);
-    
     color: rgb(0, 0, 0);
     border-width: 0 0 1 0;
     position: fixed;
@@ -20,19 +19,21 @@
 
 
 .Header-Container {
-    display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
-    width: 88%;
-    margin: 0px auto;
+    display: flex;
+    width: 98%;
+    margin: 0px 0px;
     padding: 1vh 1vw;
 }
 
-#Logo-Section h1 {
-    text-align: left;
-    font-size: 1.5rem;
+#Logo-Section {
+    display: flex;
 }
 
-#Navigation-Bar {
+#Logo-Section img {
+    height: 70px;
+}
+
+/* #Navigation-Bar {
     display: flex;
     justify-content: center;
     padding: 0;
@@ -47,18 +48,20 @@
 #Navigation-Bar li:hover {
     margin: 0 1vw;
     font-weight: bold;
-}
+} */
 
 #Navigation-Bar-Scrolled {
     display: flex;
     justify-content: center;
     padding: 0;
+    margin-left: 50px;
     list-style: none;
 }
 
 #Navigation-Bar-Scrolled li {
     margin: 0 1vw;
     font-size: 1.5rem;
+    text-decoration: none;
 }
 
 #Navigation-Bar-Scrolled li:hover {
@@ -68,6 +71,11 @@
 
 #Navigation-Bar-Scrolled a {
     color: rgb(0, 0, 0);
+    text-decoration: none;
+}
+
+#input-with-logo{
+    
 }
 
 #LoginCart {
