--- a/src/Components/swap-buttons/Buttons.css
+++ b/src/Components/swap-buttons/Buttons.css
@@ -28,3 +28,13 @@
     padding-top: 20px;
   }
   
+  @keyframes fadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
+  }
+  
+  .fadeIn {
+    animation-name: fadeIn;
+    animation-duration: 0.5s;
+  }
+  
