--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -2,12 +2,52 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
-    padding: 30px; 
-  }
+    padding: 30px 0px; 
+}
   
-  .topContent {
+.topContent {
+  width: 100%;
+  margin-top: 50px;
+}
+
+#banner {
+  position: relative;
+}
+
+
+#bannerImg {
     width: 100%;
-    margin-top: 50px;
+}
+
+#bannerText {
+    position: absolute;
+    top: 300px;
+    left: 100px;  
+}
+
+#bannerText h1{
+  font-weight: bolder;
+  font-size: 80px;
+  line-height: 98%;
+  margin: 0;
+}
+
+#bannerText p{
+  margin-top: 20px;
+  font-size: 32px;
+}
+
+
+
+
+  #learnMore{
+    margin-top: 30px;
+    background-color: #F18D04;
+    padding: 20px 40px;
+    border-radius: 23px;
+    border: none;
+    font-size: 24px;
+    color: white;
   }
   
   .ButtonsArea {
